--- a/templates/alb.yaml
+++ b/templates/alb.yaml
@@ -25,8 +25,7 @@ Resources:
     Properties:
       GroupName: !Sub "${Prefix}-spd-ehs-elb-sg"
       GroupDescription: Enable SSH access via port 22
-      GroupDescription: !Ref "AWS::StackName"
-      VpcId: { "Fn::ImportValue": !Sub "${VpcModule}-Id" }
+      VpcId: { "Fn::ImportValue": !Sub "${VpcModule}VPC" }
   SecurityGroupIngressHTTP:
     Type: 'AWS::EC2::SecurityGroupIngress'
     Properties:
@@ -55,7 +54,7 @@ Resources:
       Port: 443
       Protocol: HTTPS
       TargetType: ip
-      VpcId: {'Fn::ImportValue': !Sub '${VpcModule}-Id'}
+      VpcId: {'Fn::ImportValue': !Sub '${VpcModule}VPC'}
   TargetGroup2:
     Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
     Properties:
@@ -68,7 +67,7 @@ Resources:
       Port: 8443
       Protocol: HTTPS
       TargetType: ip
-      VpcId: {'Fn::ImportValue': !Sub '${VpcModule}-Id'}
+      VpcId: {'Fn::ImportValue': !Sub '${VpcModule}VPC'}
   Listener1:
     Type: 'AWS::ElasticLoadBalancingV2::Listener'
     Properties:
@@ -104,8 +103,8 @@ Resources:
       SecurityGroups:
         - !Ref SecurityGroup
       Subnets:
-        - { "Fn::ImportValue": !Sub "${VpcModule}-CoreSubnet1" }
-        - { "Fn::ImportValue": !Sub "${VpcModule}-CoreSubnet2" }
+        - { "Fn::ImportValue": !Sub "${VpcModule}CoreSubnet1" }
+        - { "Fn::ImportValue": !Sub "${VpcModule}CoreSubnet2" }
       Type: application
 Outputs:
   Arn:
