--- a/templates/alb.yaml
+++ b/templates/alb.yaml
@@ -1,9 +1,15 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: ""
 Parameters:
-  VpcModule:
-    Description: "Stack name of vpc module."
+  ProductionVPC:
     Type: String
+    Description: Production VPC.
+  ProductionCoreSubnet1:
+    Type: String
+    Description: Production VPC private subnet 1.
+  ProductionCoreSubnet2:
+    Type: String
+    Description: Production VPC private subnet 2.
   Prefix:
     Description: "Stack name of vpc module."
     Type: String
@@ -25,7 +31,7 @@ Resources:
     Properties:
       GroupName: !Sub "${Prefix}-spd-ehs-elb-sg"
       GroupDescription: Enable SSH access via port 22
-      VpcId: { "Fn::ImportValue": !Sub "${VpcModule}-VPC" }
+      VpcId: !Ref ProductionVPC
   SecurityGroupIngressHTTP:
     Type: 'AWS::EC2::SecurityGroupIngress'
     Properties:
@@ -54,7 +60,7 @@ Resources:
       Port: 443
       Protocol: HTTPS
       TargetType: ip
-      VpcId: {'Fn::ImportValue': !Sub '${VpcModule}-VPC'}
+      VpcId: !Ref ProductionVPC
   TargetGroup2:
     Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
     Properties:
@@ -67,7 +73,7 @@ Resources:
       Port: 8443
       Protocol: HTTPS
       TargetType: ip
-      VpcId: {'Fn::ImportValue': !Sub '${VpcModule}-VPC'}
+      VpcId: !Ref ProductionVPC
   Listener1:
     Type: 'AWS::ElasticLoadBalancingV2::Listener'
     Properties:
@@ -103,8 +109,8 @@ Resources:
       SecurityGroups:
         - !Ref SecurityGroup
       Subnets:
-        - { "Fn::ImportValue": !Sub "${VpcModule}-CoreSubnet1" }
-        - { "Fn::ImportValue": !Sub "${VpcModule}-CoreSubnet2" }
+        - !Ref ProductionCoreSubnet1
+        - !Ref ProductionCoreSubnet2
       Type: application
 Outputs:
   Arn:
