--- a/templates/compliance-hipaa-entrypoint.template.yaml
+++ b/templates/compliance-hipaa-entrypoint.template.yaml
@@ -369,7 +369,7 @@ Resources:
       TimeoutInMinutes: 60
       Parameters:
         Prefix: "abc"
-        KeyName: ""
+        KeyName: "spd-aws-admin"
         ManagementVPC:
           Fn::GetAtt: 
           - MgmtStack
