--- a/templates/compliance-hipaa-second-entrypoint.template.yaml
+++ b/templates/compliance-hipaa-second-entrypoint.template.yaml
@@ -335,7 +335,7 @@ Resources:
       TimeoutInMinutes: 60
       Parameters:
         Prefix: "abc"
-        KeyName: ""
+        KeyName: "spd-aws-admin"
         ManagementVPC:
           Fn::GetAtt: 
           - MgmtStack
