--- a/templates/compliance-hipaa-entrypoint.template.yaml
+++ b/templates/compliance-hipaa-entrypoint.template.yaml
@@ -97,6 +97,9 @@ Metadata:
       QSS3KeyPrefix:
         default: Quick Start S3 key prefix
 Parameters:
+  Prefix:
+    Type: String
+    Description: ''
   AWSConfigARN:
     Type: String
     Default: ''
@@ -254,6 +257,7 @@ Resources:
             QSS3KeyPrefix: !Ref QSS3KeyPrefix
       TimeoutInMinutes: 60
       Parameters:
+        Prefix: !Ref Prefix
         ProdVPCCIDRBlock: !Ref ProdVPCCIDRBlock
         ProdVPCSubnet1: !Ref ProdVPCSubnet1
         ProdVPCSubnet2: !Ref ProdVPCSubnet2
@@ -270,6 +274,7 @@ Resources:
             QSS3KeyPrefix: !Ref QSS3KeyPrefix
       TimeoutInMinutes: 60
       Parameters:
+        Prefix: !Ref Prefix
         MgmtVPCCIDRBlock: !Ref MgmtVPCCIDRBlock
         MgmtVPCPublicSubnet1: !Ref MgmtVPCPublicSubnet1
         MgmtVPCPublicSubnet2: !Ref MgmtVPCPublicSubnet2
@@ -287,6 +292,7 @@ Resources:
             QSS3KeyPrefix: !Ref QSS3KeyPrefix
       TimeoutInMinutes: 60
       Parameters:
+        Prefix: !Ref Prefix
         ProdVPCCIDRBlock: !Ref ProdVPCCIDRBlock
         ProductionVPC:
           Fn::GetAtt: 
@@ -344,7 +350,7 @@ Resources:
             QSS3KeyPrefix: !Ref QSS3KeyPrefix
       TimeoutInMinutes: 60
       Parameters:
-        Prefix: "abc"
+        Prefix: !Ref Prefix
         ProductionVPC:
           Fn::GetAtt: 
           - ProdStack
@@ -368,7 +374,7 @@ Resources:
             QSS3KeyPrefix: !Ref QSS3KeyPrefix
       TimeoutInMinutes: 60
       Parameters:
-        Prefix: "abc"
+        Prefix: !Ref Prefix
         KeyName: "spd-aws-admin"
         ManagementVPC:
           Fn::GetAtt: 
